add documentação completa
