# aula12/app.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const cookieParser = require('cookie-parser');
 const logger = require('morgan');
-
+const tarefasRouter = require("./routes/tarefaRouter");
 const apidocsRouter = require('./routes/apidocs');
 
 const app = express();
@@ -10,6 +10,7 @@ app.use(logger('dev'));
 app.use(express.json());
 app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
+app.use("/tarefas", tarefasRouter);
 
 app.use("/api-docs", apidocsRouter);
 
